feat: adding and fixing styles, also the lang img has been update

--- a/src/i18n/locales/en-USA/navbar.json
+++ b/src/i18n/locales/en-USA/navbar.json
@@ -1,6 +1,6 @@
 {
   "home": "Home",
-  "about": "About",
+  "about": "About Me",
   "resume": "Resume",
   "portfolio": "Portfolio",
   "title": "Freddy Saavedra",
