fix: fixing text and href

--- a/src/i18n/locales/es-PE/personal_info.json
+++ b/src/i18n/locales/es-PE/personal_info.json
@@ -9,8 +9,8 @@
     "title": "Informacion Personal",
     "age": "Edad: 31 años",
     "email": "Correo: freddy.saavedra2807@gmail.com",
-    "phone": "Phone: + (51) 917 325 863",
-    "address": "Address: Lima, Peru"
+    "phone": "Teléfono : + (51) 917 325 863",
+    "address": "Dirección : Lima, Peru"
   },
   "skills": {
     "title": "Que Ofrezco",
