feat: updating cv information

--- a/src/i18n/locales/en-USA/personal_info.json
+++ b/src/i18n/locales/en-USA/personal_info.json
@@ -2,7 +2,7 @@
   "description": {
     "title": "Who am I ?",
     "subtitle": "A Web Developer | Located In Lima - Peru",
-    "text": "I am a Mechatronics Engineer transitioning into web development, driven by a strong enthusiasm to establish a career in this field. I am eager to enhance my programming skills, contribute to innovative technologies, and grow as a professional in the tech industry.",
+    "text": "I have 6 years of experience in software development and integration. As a Mechatronics Engineer and Industrial Programmer, I have worked on data integration projects and the design of control interfaces for industrial systems. Currently transitioning into frontend web development, I bring hands-on experience with React, API data integration, and implementing updates for web platforms. I have collaborated closely with UI/UX design teams, QA testing teams, and backend developers to deliver efficient, scalable, and user-friendly solutions.",
     "button": "Download My CV"
   },
   "my_info": {
